changed DBManager class to Singleton; added ExchangeAccepter class which accepts orders and respond with execution report and ClientInitiator class which sends order and insert trade into database after receiving execution report; added a method to send order to exchange

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@
 DatabaseManager.java
 /SaveDialog.class
 /TestClass.class
+
+*.csv
+/ExchangeListener.class
+/Market.class
+/TradeCapture.class
+/MyClass.class
+/FooApplication.class
+/Application.class
+/fooApplication.class
+/bin/
