--- a/.classpath
+++ b/.classpath
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Downloads/mysql-connector-java-5.1.36/mysql-connector-java-5.1.36-bin.jar"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Financial/opencsv-3.5.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Desktop/org.quickfixj-1.6.0/quickfixj-all-1.6.0.jar"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Desktop/org.quickfixj-1.6.0/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Desktop/org.quickfixj-1.6.0/lib/jaxen-1.1.4.jar"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Desktop/org.quickfixj-1.6.0/lib/jcl-over-slf4j-1.7.12.jar"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Desktop/org.quickfixj-1.6.0/lib/je-2.1.30.jar"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Desktop/org.quickfixj-1.6.0/lib/mina-core-2.0.9.jar"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Desktop/org.quickfixj-1.6.0/lib/proxool-0.9.1.jar"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Desktop/org.quickfixj-1.6.0/lib/slf4j-api-1.7.12.jar"/>
-	<classpathentry kind="lib" path="/Users/Haoxiang/Desktop/org.quickfixj-1.6.0/lib/slf4j-jdk14-1.7.12.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry exported="true" kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxen-1.1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jcl-over-slf4j-1.7.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/je-2.1.30.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mina-core-2.0.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.36-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opencsv-3.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/proxool-0.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/quickfixj-all-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-jdk14-1.7.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
