--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/quickfixj-all-1.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-jdk14-1.7.12.jar"/>
+	<classpathentry kind="lib" path="lib/jms.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
